--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome to my Finance Tracker App</h1>
-<%= button_to 'Logout', destroy_user_session_path, method: :delete %>
+<br/>
+<%= button_to 'Logout', destroy_user_session_path, method: :delete, class:"btn btn-dark" %>
